--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -433,23 +433,6 @@
          </layout>
         </item>
         <item>
-         <widget class="QSpinBox" name="sbSerial">
-          <property name="maximum">
-           <number>66535</number>
-          </property>
-          <property name="value">
-           <number>6658</number>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QPushButton" name="pbSetSerial">
-          <property name="text">
-           <string>Set Serial</string>
-          </property>
-         </widget>
-        </item>
-        <item>
          <spacer name="verticalSpacer_2">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -650,6 +633,9 @@
         </item>
         <item>
          <widget class="QCheckBox" name="checkBox_2">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
           <property name="statusTip">
            <string>Show all data from port</string>
           </property>
@@ -690,7 +676,7 @@
      <x>0</x>
      <y>0</y>
      <width>388</width>
-     <height>23</height>
+     <height>21</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
