--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -487,21 +487,21 @@
         <item>
          <layout class="QHBoxLayout" name="horizontalLayout_5">
           <item>
-           <widget class="QToolButton" name="tbInsertRow">
+           <widget class="QToolButton" name="btInsert">
             <property name="text">
              <string>Insert</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="tbAddCmd">
+           <widget class="QToolButton" name="btAdd">
             <property name="text">
              <string>Add</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="toolButton_5">
+           <widget class="QToolButton" name="btDel">
             <property name="text">
              <string>Delete</string>
             </property>
@@ -521,14 +521,14 @@
            </spacer>
           </item>
           <item>
-           <widget class="QToolButton" name="toolButton_3">
+           <widget class="QToolButton" name="btDown">
             <property name="text">
              <string>Down</string>
             </property>
            </widget>
           </item>
           <item>
-           <widget class="QToolButton" name="toolButton_4">
+           <widget class="QToolButton" name="btUp">
             <property name="text">
              <string>Up</string>
             </property>
