--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="tab">
        <attribute name="title">
@@ -686,7 +686,7 @@
      <x>0</x>
      <y>0</y>
      <width>388</width>
-     <height>20</height>
+     <height>23</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
@@ -760,7 +760,7 @@
   <customwidget>
    <class>HexSpinBox</class>
    <extends>QSpinBox</extends>
-   <header>D:\Projects\qWake\src\hexspinbox.h</header>
+   <header>../qWake/src/hexspinbox.h</header>
   </customwidget>
  </customwidgets>
  <resources>
